--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "redberry",
+  "name": "workspace",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "script.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format:all": "prettier --write \"src/**/*.js\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "prettier": "^2.8.3"
+    "handlebars": "^4.7.7",
+    "prettier": "^2.8.3",
+    "rxjs": "^7.8.0"
   }
 }
